--- a/portfolio.html
+++ b/portfolio.html
@@ -72,8 +72,14 @@
         <ul class=" project-cards list">
             <li class="project-item">
                 <a class="our-projects" href="#" >
-                <img class="img" src="images/project1.jpg" alt="Технокряк"
+                <div class="project-thumb">
+                  <img class="img" src="images/project1.jpg" alt="Технокряк"
                      width="370"/>
+                       <p class="project-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                          Все это позволит посетителю получить исчерпывающие сведения? 
+                          о компании или частном лице.
+                        </p>
+                </div>
                   <div class="btm-border">
                      <h2 class="subtitle-portfolio">Технокряк</h2>
                         <p class="text-list">Веб-сайт</p>
@@ -82,8 +88,14 @@
             </li>
             <li class="project-item">
                 <a href="#" class="our-projects">
+                  <div class="project-thumb">
                 <img class="img" src="images/project2.jpg" alt="Постер New Orlean vs Golden Star"
                      width="370"/>
+                     <p class="project-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                      Все это позволит посетителю получить исчерпывающие сведения? 
+                      о компании или частном лице.
+                    </p>
+                    </div>
                   <div class="btm-border">
                      <h2 class="subtitle-portfolio">Постер New Orlean vs Golden Star</h2>
                         <p class="text-list">Дизайн</p>
@@ -92,8 +104,14 @@
             </li>
             <li class="project-item">
                 <a href="#" class="our-projects">
+                  <div class="project-thumb">
                 <img class="img" src="images/project3.jpg" alt="Ресторан Seafood"
                      width="370"/>
+                     <p class="project-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                      Все это позволит посетителю получить исчерпывающие сведения? 
+                      о компании или частном лице.
+                    </p>
+                    </div>
                   <div class="btm-border">
                      <h2 class="subtitle-portfolio">Ресторан Seafood</h2>
                         <p class="text-list">Приложение</p>
@@ -102,8 +120,14 @@
             </li>
             <li class="project-item">
                 <a href="#" class="our-projects">
+                  <div class="project-thumb">
                 <img class="img" src="images/project4.jpg" alt="Проект Prime"
                      width="370"/>
+                     <p class="project-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                      Все это позволит посетителю получить исчерпывающие сведения? 
+                      о компании или частном лице.
+                    </p>
+                    </div>
                   <div class="btm-border">
                      <h2 class="subtitle-portfolio">Проект Prime</h2>
                         <p class="text-list">Маркетинг</p>
@@ -112,8 +136,14 @@
             </li>
             <li class="project-item">
                 <a href="#" class="our-projects">
+                  <div class="project-thumb">
                 <img class="img" src="images/project5.jpg" alt="Проект Boxes"
                      width="370"/>
+                     <p class="project-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                      Все это позволит посетителю получить исчерпывающие сведения? 
+                      о компании или частном лице.
+                    </p>
+                    </div>
                    <div class="btm-border">
                      <h2 class="subtitle-portfolio">Проект Boxes</h2>
                         <p class="text-list">Приложение</p>
@@ -122,8 +152,14 @@
             </li>
             <li class="project-item">
                 <a href="#" class="our-projects">
+                  <div class="project-thumb">
                 <img class="img" src="images/project6.jpg" alt="Inspiration has no Borders"
                      width="370"/>
+                     <p class="project-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                      Все это позволит посетителю получить исчерпывающие сведения? 
+                      о компании или частном лице.
+                    </p>
+                    </div>
                   <div class="btm-border">
                      <h2 class="subtitle-portfolio">Inspiration has no Borders</h2>
                         <p class="text-list">Веб-сайт</p>
@@ -132,8 +168,14 @@
             </li>
             <li class="project-item">
                  <a href="#" class="our-projects">
+                   <div class="project-thumb">
                 <img class="img" src="images/project7.jpg" alt="Издание Limited Edition"
                      width="370"/>
+                     <p class="project-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                      Все это позволит посетителю получить исчерпывающие сведения? 
+                      о компании или частном лице.
+                    </p>
+                    </div>
                   <div class="btm-border">
                      <h2 class="subtitle-portfolio">Издание Limited Edition</h2>
                         <p class="text-list">Дизайн</p>
@@ -142,8 +184,14 @@
             </li>
             <li class="project-item">
                 <a href="#" class="our-projects">
+                  <div class="project-thumb">
                 <img class="img" src="images/project8.jpg" alt="Проект LAB"
                      width="370"/>
+                     <p class="project-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                      Все это позволит посетителю получить исчерпывающие сведения? 
+                      о компании или частном лице.
+                    </p>
+                     </div>
                   <div class="btm-border">
                      <h2 class="subtitle-portfolio">Проект LAB</h2>
                         <p class="text-list">Маркетинг</p>
@@ -152,8 +200,14 @@
             </li>
             <li class="project-item">
                 <a href="#" class="our-projects">
+                  <div class="project-thumb">
                 <img class="img" src="images/project9.jpg" alt="Growing Business"
                      width="370"/>
+                     <p class="project-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                      Все это позволит посетителю получить исчерпывающие сведения? 
+                      о компании или частном лице.
+                    </p>
+                    </div>
                   <div class="btm-border">
                      <h2 class="subtitle-portfolio">Growing Business</h2>
                         <p class="text-list">Приложение</p>
